# uShell

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.MD
cmd/: CMakeLists.txt
cmd/clear/: CMakeLists.txt  ushell_cmd_clear.c  ushell_cmd_clear.h
cmd/fs_littlefs/: CMakeLists.txt  ushell_cmd_fs.c  ushell_cmd_fs.h  ushell_cmd_fs_xmodem.c  ushell_cmd_fs_xmodem.h
cmd/help/: CMakeLists.txt  ushell_cmd_help.c  ushell_cmd_help.h
cmd/whoami/: CMakeLists.txt  ushell_cmd_whoami.c  ushell_cmd_whoami.h
main/: CMakeLists.txt  uShell.c  uShell.h  uShell_cmd.h  uShell_hal.c  uShell_hal.h  uShell_osal.c  uShell_osal.h  uShell_vt100.c  uShell_vt100.h  ushell.c  ushell.h  ushell_auth.c  ushell_auth.h  ushell_cmd.c  ushell_cmd.h  ushell_hal.c  ushell_hal.h  ushell_history.c  ushell_history.h  ushell_log.c  ushell_log.h  ushell_osal.c  ushell_osal.h  ushell_socket.c  ushell_socket.h  ushell_vcp.c  ushell_vcp.h  ushell_vt100.c  ushell_vt100.h
port/: CMakeLists.txt
port/hal/: CMakeLists.txt
port/hal/asf/: CMakeLists.txt  ushell_hal_asf.c  ushell_hal_asf.h
port/hal/stm32_hal/: uShell_hal_port.c  uShell_hal_port.h  ushell_hal_port.c  ushell_hal_port.h
port/hal/stm32_hal_f4/: CMakeLists.txt  ushell_hal_stm32f4.c  ushell_hal_stm32f4.h
port/osal/: CMakeLists.txt
port/osal/freertos/: CMakeLists.txt  uShell_osal_port.c  uShell_osal_port.h  ushell_osal_freertos.c  ushell_osal_freertos.h  ushell_osal_port.c  ushell_osal_port.h
startup/: CMakeLists.txt  ushell_startup.c  ushell_startup.h  ushell_startup_cfg.h
test/: CMakeLists.txt
test/config/: CMakeLists.txt  FreeRTOSConfig.h  ushell_cfg.h  ushell_startup_cfg.h
utils/: CMakeLists.txt
utils/XModem/: CMakeLists.txt  LICENCE.md  README.MD
utils/XModem/main/: CMakeLists.txt  xmodem.c  xmodem.h  xmodem_client.c  xmodem_client.h  xmodem_server.c  xmodem_server.h
