if(USHELL_UNIT_TEST_BUILD)
    include(FetchContent)
    message("-- Adding unit tests")
    add_subdirectory(unit)
    add_subdirectory(config)
elseif(USHELL_STANDALONE_BUILD)
    include(FetchContent)
    message("-- Adding standalone build configuration")
    add_subdirectory(config)
elseif(USHELL_INTEGRATION_TEST_BUILD)
    include(FetchContent)
    message("-- Adding integration tests")
    add_subdirectory(config)
endif()