if(HAL_PORT_ASF)
    add_subdirectory(asf)
    message("-- UShell using ASF HAL port")
elseif(HAL_PORT_CMOCK)
    add_subdirectory(cmock)
    message("-- UShell using CMOCK HAL port")
elseif(HAL_PORT_STM32F4)
    add_subdirectory(stm32_hal_f4)
    message("-- UShell using STM32F4 HAL port")
else()
    message(FATAL_ERROR "No valid HAL port selected for UShell")
endif()
